# messaging

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yml  example.py  pyproject.toml
.github/workflows/: python-app.yml
src/messaging/: main.py
src/messaging/adapters/: __init__.py
src/messaging/adapters/http/: __init__.py  handlers.py  schema.py  utils.py
src/messaging/adapters/repository/: __init__.py  migrate.py  repo.py
src/messaging/adapters/repository/migrations/: 1_init.up.sql
src/messaging/domain/: __init__.py  models.py
src/messaging/service/: commands.py  service.py
src/tests/integration/: app_fixture.py  conftest.py  helpers.py  test_list_from_sequence_http.py  test_list_unread_http.py  test_lol.py  test_publish_http.py
src/tests/plugin/: pg_controller.py
